--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <button>Get Started</button>
         </div>
       <div class="right">
-         <img src="ggop.jpg">
+         <img src="images/yop.jpg">
          <h1>since 1976</h1>
        </div>
     </div>
