waxa badalay sawirada

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         </ul>
         <div>
-            <Button class="loginbtn">login</Button>
-            <Button class="singupbtn">singup</Button>
+            <Button class="logo">loginup</Button>
+            <Button class="lop">singup</Button>
         </div>
 
     </div>
@@ -113,22 +113,22 @@
         <button>learn more</button>
     </div>
     <div class="r-side">
-        <img src="socik.jpeg">
+        <img src="images/socik.jpeg">
         <div class="icon">
         <p>15+</p>
         <h2>Years of Experience</h2>
         </div>
-        <img src="socik.jpeg">
+        <img src="images/socik.jpeg">
         <div class="icon">
         <p>40+</p>
         <h2>Product</h2>
         </div>
-        <img src="socik.jpeg">
+        <img src="images/socik.jpeg">
         <div class="icon">
         <p>2,458+</p>
         <h2>Satisfied Client</h2>
         </div>
-        <img src="socik.jpeg">
+        <img src="images/socik.jpeg">
         <div class="icon">
         <p>20</p>
         <h2>Local Team Members</h2>
@@ -140,7 +140,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex maiores aliquam magnam, maxime distinctio </p>
    </div>
    <div class="made">
-    <img src="yop.jpg" alt="">
+    <img src="images/yop.jpg" alt="">
     <div class="star">
       &starf;  &starf;  &starf;  &starf; &starf;
     </div>   
@@ -160,7 +160,7 @@
 </div>
 <div class="bol">
     <div class="bog1">
-    <img src="ggop.jpg" alt="">
+    <img src="images/yop.jpg" alt="">
     <h2>Innovations for a <br> Greener Future</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora magni, facere sapiente fuga suscipit debitis dicta! <br>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio autem deserunt quam ad dicta, hic fugit.
@@ -168,7 +168,7 @@
     <a href="#">Read More</a>
      </div>
   <div class="bog1">
-    <img src="ggop.jpg" alt="">
+    <img src="images/yop.jpg" alt="">
     <h2>The Power of<br>Agricultural Analytics </h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora magni, facere sapiente fuga suscipit debitis dicta! <br>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio autem deserunt quam ad dicta, hic fugit.
@@ -176,7 +176,7 @@
     <a href="#">Read More</a>
 </div>
 <div class="bog1">
-    <img src="ggop.jpg" alt="">
+    <img src="images/yop.jpg" alt="">
     <h2>Cultivating Sustainable<br>and Resilient Farm </h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora magni, facere sapiente fuga suscipit debitis dicta! <br>
      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio autem deserunt quam ad dicta, hic fugit.
@@ -188,10 +188,10 @@
         <h2> Agrivista Farms</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptates <br> porro beatae aut aspernatur eligendi tempora obcaecati?</p>
        <div class="qer">
-       <img src="website (1).jpeg" alt="">
-       <img src="website (1).jpeg" alt="">
-       <img src="website (1).jpeg" alt="">
-       <img src="website (1).jpeg" alt="">
+       <img src="images/website (1).jpeg" alt="">
+       <img src="images/website (1).jpeg" alt="">
+       <img src="images/website (1).jpeg" alt="">
+       <img src="images/website (1).jpeg" alt="">
        </div>
        <div class="jok">
        <h2>Pages</h2>
